# collectivedelusions

./: .gitignore  .image_contest.py.swp  README.md  generate_readme.py  image_contest.py  test_context.py
images/: .gitignore  README.md  generate_readme.py  generation_prompt.md  image_contest.py  judge_prompt.md  patch_flux.py  patch_flux_list.py  test_flux.py  (+13 more)
ml_research/testclaude3/: main.py  plan.md  progress.md  pyproject.toml  research_tips.md
ml_research/testclaude3/src/: cov_alignment.py  datasets_setup.py  effective_rank.py  eval_b16_fast.py  eval_b16_isoc_sweep.py  eval_diagonal_bias.py  eval_fisher.py  eval_layer_type.py  eval_per_layer_trim.py  eval_seed.py  eval_seed_more.py  eval_trim_other_methods.py  evaluate_merge.py  finetune.py  fisher.py  make_b16_seed_table.py  make_layer_type_figure.py  make_perlayer_b16_table.py  make_perlayer_figure.py  make_perlayer_seed_table.py  make_random_order_figure.py  make_seed_table.py  make_tables_figures.py  make_task_count_figure.py  make_trim_other_table.py  merging.py  model.py  multi_seed_summary.py  per_task_plot.py  regmean_covs.py  run_finetune_all.sh  run_finetune_b16.sh  run_finetune_b16_seed.sh  run_finetune_seed.sh  run_finetune_seed2.sh  task_count_random_order.py  task_count_scaling.py
ml_research/testclaude3/template/: example_paper.out  paper.aux  paper.bbl  paper.bib  paper.blg  paper.out  paper.tex  table_ablation.tex  table_b16.tex  table_b16_seeds.tex  table_layer_type.tex  table_main.tex  table_perlayer.tex  table_seeds.tex  table_task_count.tex  table_task_count_random.tex  table_trim_other.tex
(+6948 files in other folders)
