[project]
name = "testclaude3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "open-clip-torch>=3.3.0",
    "pandas>=3.0.3",
    "pypdf>=6.11.0",
    "requests>=2.34.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "torch>=2.4,<2.7",
    "torchvision>=0.21.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "wandb>=0.26.1",
]
